<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Enviro</string>
    <string name="action_settings">Settings</string>
    <string name="ip_addr">IP Address</string>
    <string name="default_ip">172.16.2.131</string>
    <string name="welcome">Welcome to Enviro!</string>
    <string name="name">Name</string>
    <string name="user_name">Username</string>
    <string name="update">Update</string>
    <string name="user_pass">Password</string>
    <string name="tag_set_title">Current Tag Set:</string>
    <string name="user_repass">Retype Password</string>
    <string name="booth_description_title">Booth Description</string>
    <string name="tags_title">User Profile</string>
    <string name="tags_title_updated">User Profile Updated</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="title_activity_register">Register</string>
    <string name="hello_world">Hello world!</string>
    <string name="ok">OK</string>
    <string name="descr_booth">Description</string>
    <string name="no_checkin">You are not checked in</string>
    <string name="register">Register</string>
    <string name="title_activity_choose_interests">Choose your interests</string>
    <string name="interestsTitle_update">Choose other interests</string>
    <string name="interestsTitle">Fill in to create your personalized profile</string>
    <string name="suggestions">Android</string>
    <string name="title_activity_view_booths">View Booths</string>
    <string name="view_booths">View Booths</string>
    <string name="title_activity_current">The Magic Hat</string>
    <string name="current_location">Current Location</string>
    <string name="users_match">Users Checked In</string>
    <string name="current_loc_name">Intel</string>
    <string name="matched">Similarity</string>
    <string name="matched_perc">50%</string>
    <string name="user_matched_name">Irina Grigorescu</string>
    <string name="tag_name">Android</string>
    <string name="tag_sim">25%</string>
    <string name="checkedin_no">5</string>
    <string name="checkedin">People Checked In</string>
    <string name="booth_descr">A cool software-hardware company</string>
    <string name="desc">Picture</string>
    <string name="go_back_current">Current Location</string>
    <string name="title_activity_profile">Update Profile</string>
    <string name="title_activity_user_match">Other Users</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_profile_view">ProfileViewActivity</string>

</resources>
