<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <!-- Title -->
    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <!-- User input -->
	<TextView
        android:id="@+id/textViewUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textViewWelcome"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/user_name" />

	<EditText
	    android:id="@+id/editTextUser"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewUser"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:inputType="textPersonName"
	    android:ems="10" >
	    <requestFocus />
   </EditText>

    <!-- Pass input -->
    <TextView
	    android:id="@+id/textViewPass"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="15dp"
	    android:layout_below="@+id/editTextUser"
	    android:layout_marginTop="5dp"
	    android:text="@string/user_pass" />

	<EditText
	    android:id="@+id/editTextPass"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewPass"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:ems="10"
	    android:inputType="textPassword" 
	/>
	
	<!-- IP -->
    <TextView
	    android:id="@+id/textViewIP"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="15dp"
	    android:layout_below="@+id/editTextPass"
	    android:layout_marginTop="5dp"
	    android:text="@string/ip_addr" />

	<EditText
	    android:id="@+id/editTextIP"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewIP"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:text="@string/default_ip"
	    android:ems="10"
	    android:inputType="text" 
	/>
   
    <!-- Buttons -->

	<Button
	    android:id="@+id/buttonLogin"
	    android:layout_width="90dp"
        android:layout_height="50dp"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="15dp"
	    android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
	    android:text="@string/button_login" />
	
	<Button
	    android:id="@+id/buttonRegister"
	    android:layout_width="90dp"
        android:layout_height="50dp"
	    android:layout_alignParentRight="true"
	    android:layout_marginRight="15dp"
	    android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
	    android:text="@string/button_register" />

	<ProgressBar
	    android:id="@+id/progressBarLogin"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true" />

</RelativeLayout>
