<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
     	xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/booth_element_root"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:background="#66CCCC" 
        android:orientation="horizontal">

        <TextView
            android:id="@+id/booth_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/current_loc_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

         <TextView
            android:id="@+id/booth_description_title_layout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@id/booth_title_layout"
            android:text="@string/descr_booth"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
            android:id="@+id/booth_logo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/booth_similarity_text_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="15dp"
            android:layout_below="@id/booth_logo_layout"
            android:layout_marginTop="10dp"
            android:text="@string/matched"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/booth_checkedin_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignBottom="@id/booth_similarity_text_layout"
            android:layout_alignParentRight="true"
            android:text="@string/checkedin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/booth_similarity_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/booth_similarity_text_layout"
            android:layout_below="@id/booth_similarity_text_layout"
            android:text="@string/matched_perc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/no_checked_in_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_alignRight="@id/booth_checkedin_title_layout"
            android:layout_below="@id/booth_checkedin_title_layout"
            android:text="@string/checkedin_no"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/booth_layout_tag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:layout_below="@id/no_checked_in_layout"
            android:background="#66AAAA"
            android:textColor="#0000FF"
           	android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/booth_layout_tag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@id/booth_layout_tag1"
            android:layout_below="@id/no_checked_in_layout"
            android:background="#66AAAA"
            android:textColor="#0000FF"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/booth_layout_tag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@id/booth_layout_tag2"
            android:layout_below="@id/no_checked_in_layout"
            android:background="#66AAAA"
            android:textColor="#0000FF"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <LinearLayout
	        android:id="@+id/lineSeparateBooths_layout"
	        android:layout_width="fill_parent"
	        android:layout_height="5dp"
	        android:background="#000000"
	        android:layout_alignParentBottom="true"
	        android:orientation="vertical" >
	    </LinearLayout>
        
    </RelativeLayout>