<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollViewRegister"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
    
    <RelativeLayout
        android:id="@+id/relativeviewregister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

    <!-- Name input -->
	<TextView
        android:id="@+id/textViewNameRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/name" />

	<EditText
	    android:id="@+id/editTextNameRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewNameRegister"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:inputType="textPersonName"
	    android:ems="10" >
	    <requestFocus />
   </EditText>
    
    <!-- User input -->
	<TextView
        android:id="@+id/textViewUserRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextNameRegister"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:text="@string/user_name" />

	<EditText
	    android:id="@+id/editTextUserRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewUserRegister"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:inputType="textPersonName"
	    android:ems="10" >
   </EditText>

    <!-- Pass input -->
    <TextView
	    android:id="@+id/textViewPassRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="15dp"
	    android:layout_below="@+id/editTextUserRegister"
	    android:layout_marginTop="5dp"
	    android:text="@string/user_pass" />

	<EditText
	    android:id="@+id/editTextPassRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewPassRegister"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:ems="10"
	    android:inputType="textPassword" 
	/>
	
	<!-- Retype Pass input -->
    <TextView
	    android:id="@+id/textViewRePassRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_marginLeft="15dp"
	    android:layout_below="@+id/editTextPassRegister"
	    android:layout_marginTop="5dp"
	    android:text="@string/user_repass" />

	<EditText
	    android:id="@+id/editTextRePassRegister"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/textViewRePassRegister"
	    android:layout_marginLeft="15dp"
	    android:layout_marginRight="15dp"
	    android:layout_marginTop="5dp"
	    android:ems="10"
	    android:inputType="textPassword" 
	/>
   
    <!-- Choose interests input -->
    <TextView
        android:id="@+id/textViewregisterinterests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextRePassRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:text="@string/interestsTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    
    <MultiAutoCompleteTextView
        android:id="@+id/autocompleteRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewregisterinterests"
        android:layout_marginTop="5dp"
        android:ems="10"  />

    <!-- Buttons -->
	<Button
	    android:id="@+id/buttonOkRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/autocompleteRegister"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_centerHorizontal="true"
        android:text="@string/ok"/>

	<ProgressBar
	    android:id="@+id/progressBarRegister"
	    style="?android:attr/progressBarStyleLarge"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true" />

</RelativeLayout>

</ScrollView>