<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".CurrentActivity" >
    <requestFocus />

    <TextView
        android:id="@+id/textViewCurrent"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/current_location"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:id="@+id/relativeLayoutCurrent"
        android:layout_width="fill_parent"
        android:layout_height="125dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewCurrent"
        android:background="#66CCCC" >

        <TextView
            android:id="@+id/textViewCurrentName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/current_loc_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageView
            android:id="@+id/imageViewCurrent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="5dp"
            android:visibility="invisible"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textViewMatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageViewCurrent"
            android:visibility="invisible"
            android:layout_marginTop="10dp"
            android:text="@string/matched"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewCheckin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textViewMatch"
            android:visibility="invisible"
            android:layout_alignParentRight="true"
            android:text="@string/checkedin"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewMatchPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textViewMatch"
            android:layout_below="@+id/textViewMatch"
            android:visibility="invisible"
            android:text="@string/matched_perc"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewCheckinNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textViewCheckin"
            android:layout_below="@+id/textViewCheckin"
            android:text="@string/checkedin_no"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewTag1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0dp"
            android:background="#66AAAA"
            android:textColor="#0000FF"
            android:visibility="invisible"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewTag2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/textViewTag1"
            android:background="#66AAAA"
            android:textColor="#0000FF"
            android:visibility="invisible"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewTag3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_toRightOf="@+id/textViewTag2"
            android:background="#66AAAA"
            android:textColor="#0000FF"
            android:visibility="invisible"
            android:text="Small Text"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewCurrentName"
            android:text="@string/descr_booth"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ProgressBar
            android:id="@+id/progressBarCurrentBooth"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <TextView
            android:id="@+id/textViewNoCheckin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/no_checkin"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/relativeLayoutCurrent"
        android:layout_marginTop="5dp"
        android:background="#000000"
        android:orientation="vertical" >
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/linearLayout1"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/imageViewCheckin"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/checkin" />

        <ImageView
            android:id="@+id/imageViewBrowse"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/browse" />

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/imageViewCheckin"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/profile_edit" />
        
        <ImageView
            android:id="@+id/imageViewUserProfile"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/imageViewBrowse"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/desc"
            android:src="@drawable/profile" />

    </RelativeLayout>

</RelativeLayout>